--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-   "ownerNumberr": "62895379169488",
+   "ownerNumberr": "6285807264974",
    "ownerName": "X-None Team",
-   "botName": "X-None Bot",
-   "txtDonate": "- Gopay : 08xxxxxxxxxx\n- Dana : 08xxxxxxxxxx\n- Ovo : 08xxxxxxxxxx\n- Saweria : https://saweria.co/fadlyid",
+   "botName": "FARUQ OFC-Dev",
+   "txtDonate": "- Gopay : 08xxxxxxxxxx\n- Dana : 085807264974\n- Ovo : 08xxxxxxxxxx\n- Saweria : https://saweria.co/gapunya",
    "pathImg": "./media/x-none.jpg",
    "sessionName": "fadlyid"
 }
